[package]
name = "cargo-upgrades"
version = "1.3.0"
authors = ["Kornel <kornel@geekhood.net>"]
categories = ["development-tools::cargo-plugins"]
repository = "https://gitlab.com/kornelski/cargo-upgrades"
homepage = "https://lib.rs/cargo-upgrades"
keywords = ["outdated", "dependencies", "deps", "subcommand"]
description = "Checks if dependencies in Cargo.toml are up to date. Compatible with workspaces and path dependencies."
edition = "2018"
license = "GPL-3.0+"
readme = "README.md"

[dependencies]
cargo_metadata = "0.13.1"
quick-error = "2.0.0"
semver = "0.11.0"
crates-index = "0.16.3"
getopts = "0.2.21"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
