[package]
name = "cargo-upgrades"
version = "1.3.4"
authors = ["Kornel <kornel@geekhood.net>"]
categories = ["development-tools::cargo-plugins"]
repository = "https://gitlab.com/kornelski/cargo-upgrades"
homepage = "https://lib.rs/cargo-upgrades"
keywords = ["outdated", "dependencies", "deps", "subcommand"]
description = "Checks if dependencies in Cargo.toml are up to date. Compatible with workspaces and path dependencies."
edition = "2018"
license = "GPL-3.0+"
readme = "README.md"

[dependencies]
cargo_metadata = "0.14.1"
quick-error = "2.0.1"
semver = "1.0.4"
crates-index = "0.18.1"
getopts = "0.2.21"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[profile.dev]
opt-level = 1
debug = 1

[profile.release]
debug = false
lto = true
